<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pairedDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="12dp"
        android:text="@string/paired_devices"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pairedDevices"
        android:layout_centerHorizontal="true"
        android:padding="25dp"
        android:text="@string/not_connected"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/switchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionState"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:padding="25dp">

        <TextView
            android:id="@+id/ext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/all_led"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/allLed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchLayout"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/configure_led_s"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/configuration"
        android:layout_centerHorizontal="true"
        android:text="@string/view_saved"
        android:textSize="20sp"
        android:layout_margin="25dp"
        android:id="@+id/mViewSaved"/>

</RelativeLayout>